# xul-cpu

./: 4-bit-cpu-v2.circ  README.md  XU4_CPU.md  assembler.md  bus-signal-tables.md  cpu.md  microcode.md
src/: CMakeLists.txt
src/assembler/: main.cpp
src/assembler/include/: AssemblerEntry.cpp  AssemblerEntry.hpp  Lexer.hpp
src/assembler/resources/: qml.qrc
src/core/include/: Logger.hpp
src/emulator/resources/: qml.qrc
src/emulator/resources/emulator-qml/: App.qml
